--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-GMAIL_USER=maxkempler@gmail.com
-GMAIL_PASS=9670azdlqt2
+GMAIL_EMAIL=maxkempler@gmail.com
+GMAIL_APP_PASSWORD=mksfugtwbvhqumgr
+NEXT_PUBLIC_RECAPTCHA_SITE_KEY=6LeN6lMrAAAAACDRBwoeuXszkjXLnbOCAuaM-I0L
+RECAPTCHA_SECRET_KEY=6LeN6lMrAAAAAGWr7DmRe3n1YLmMBQzaAL_WPgdg
